# uart_controlled_pwm_fan_controller

./: CMakeLists.txt  README
mok/: gpio.cpp  irq.cpp  multicore.cpp  pwm.cpp  stdlib.cpp  time.cpp  uart.cpp
mok/hardware/: gpio.h  irq.h  pwm.h  uart.h
mok/include/: types.h
mok/pico/: multicore.h  stdlib.h  time.h
src/: main.cpp  pwmFanControl.cpp  uart.pio  uartInterface.cpp
src/include/: pwmFanControl.hpp  uartInterface.hpp
test/: testAmd86.py
tools/: flashpico  makeCombihex  picobrun  resetpico  serial-send-byte.py  telnetFlash
